@@ -1,47 +1,22 @@
-(defproject tupelo-datomic "0.9.4"
-  :description "Tupelo Datomic:  Datomic With A Spoonful of Honey"
-  :url "http://github.com/cloojure/tupelo-datomic"
+(defproject io-tupelo-demo/datomic-basic "0.9.4"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[cheshire "5.8.1"]
+  :dependencies [
                  [com.datomic/datomic-pro "1.0.6269"]
-                 [danlentz/clj-uuid "0.1.7"]
-                 [enlive "1.1.6"]
                  [org.clojure/clojure "1.10.0"]
-                 [org.clojure/data.xml "0.2.0-alpha5"]
-                 [org.clojure/spec.alpha "0.2.176"]
-                 [org.clojure/test.check "0.9.0"]
-                 ;[org.clojure/tools.logging "0.4.0"]
                  [prismatic/schema "1.1.10"]
                  [tupelo "22.05.04"]
                  ]
   :resource-paths ["resources/"]
 
-  :profiles { :dev {:dependencies []
-                   :plugins [] }
-             :uberjar {:aot :all}}
-
   :global-vars { *warn-on-reflection* false }
 
   :plugins  [ [lein-codox "0.10.3"] ]
-  :codox {:src-dir-uri "http://github.com/cloojure/tupelo-datomic/blob/master/"
-          :src-linenum-anchor-prefix "L"}
-  :deploy-repositories {  "snapshots" :clojars
-                          "releases"  :clojars 
-                          :sign-releases false }
   :update :daily ;  :always
-; :main ^:skip-aot tupelo-datomic.core
+
   :target-path "target/%s"
   :clean-targets [ "target" ]
 
-  ; "lein test"         will not  run tests marked with the ":slow" metadata
-  ; "lein test :slow"   will only run tests marked with the ":slow" metadata
-  ; "lein test :all"    will run all  tests (built-in)
-  :test-selectors { :default    (complement :slow)
-                    :slow       :slow }
-
   :jvm-opts ["-Xms500m" "-Xmx2g"
-            ;"--add-modules" "java.xml.bind"
-            ;"-server"
             ]
 )
